--- a/SignConfigTemplate.cfg
+++ b/SignConfigTemplate.cfg
@@ -1,30 +1,32 @@
 # ##############################用户数据配置#######################################
 [UserData]
-# 签到模式 0表示单人签到 1表示多人签到 默认为0
-signs = 0
+# 签到模式 0表示单人签到 1表示多人签到
+signs = 1
+
 
 # 单人签到学号，部分学校可能用一卡通号等代替。可以到 https://fxgl.jx.edu.cn/你的高校代码/  自己尝试一下
 # 仅当选择单人签到，即上面signs = 0时才需要配置，否则可以忽略
-yourID = 你的学号
-
+yourID = 190628050123
 # 多人签到学号组，部分学校可能用一卡通号等代替。可以到  https://fxgl.jx.edu.cn/你的高校代码/   自己尝试一下
-# 仅当选择多人签到，即上面signs = 1时才需要配置，否则可以忽略，使用英语逗号 , 将每个学号分开哦，需要是同一个学校
-IDs = 学号1,学号2,学号3,学号4
+# 仅当选择多人签到，即上面signs = 1时才需要配置，否则可以忽略，使用英语逗号 , 将每个学号分开哦，需要是同一个学校，两侧的引号别丢了
+
+# 刘泽华  , 190628050120
+IDs = '190628050112, 190628050120, 190628050123, 190628050138, 190628050139'
+# IDs = '190628050123'
 
 # 高校代码，详见GitHub项目介绍
-# 多人签到暂不支持多个学校签到
-schoolID = 你的高校代码
+# 多人签到暂不支持多个学校签到（你想干嘛？）
+schoolID = 4136012943
 
-# 身份类型 0表示学生 1表示教职工 默认为0
-# 因缺少教职工数据，无法确定是否适配
+# 身份类型 0表示学生 1表示教职工
 identity = 0
 
-# 是否为毕业班的学生 0表示是毕业班的学生 1表示不是毕业班的学生 默认1
-sfby = 1
+# 是否为毕业班的学生 0表示是毕业班的学生 1表示不是毕业班的学生。
+sfby = 0
 
 # 暂不支持健康状况为异常和被隔离的健康上报，请手动提交，确保自己提交的信息真实有效。
 
-# 签到模式 默认为0
+# 签到模式
 # 0表示获取前一日的签到定位（长时间签到可能会偏差较大，适合多人签到且时间跨度不长，每次签到会在上一次签到的基础上随机偏移1.1m以内，理论上连续签到一年会偏移200m左右
 # 1表示使用输入的经纬度（单人签到推荐，会在你输入的经纬度定位上随机偏移11.1m以内
 signType = 0
@@ -34,16 +36,15 @@ signType = 0
 lng = 123.456789
 # 纬度，至少精确到小数点后6
 lat = 22.222222
-# 地址 尽量详细 包含省市区/镇
-zddlwz = 你的地址
+# 地址 尽量详细 包含省市区/镇，两侧的引号别丢了
+zddlwz = '你的地址'
 
 # ##############################用户通知数据配置#######################################
-[NotificationData]
 # ##########SERVER酱配置###############
 # #SERVER酱Turbo升级版新官网 sct.ftqq.com
-# 是否开启SERVER酱通知 0表示关闭 1表示开启 默认为0
-server_chan = 0
-# SERVER酱sendkey
+# 是否开启SERVER酱通知 0表示关闭 1表示开启
+server_chan = 1
+# SERVER酱sendkey，两侧的引号别丢了
 # 查看网址 sct.ftqq.com/sendkey
 # 免费版可每日发送五条推送
-sendkey = 你的key
+sendkey = 'SCT59395TwLqPa2zaSp4gQIU9Ord0jWTm'
