--- a/SignConfigTemplate.cfg
+++ b/SignConfigTemplate.cfg
@@ -40,6 +40,7 @@ lat = 22.222222
 zddlwz = '你的地址'
 
 # ##############################用户通知数据配置#######################################
+[NotificationData]
 # ##########SERVER酱配置###############
 # #SERVER酱Turbo升级版新官网 sct.ftqq.com
 # 是否开启SERVER酱通知 0表示关闭 1表示开启
